--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,26 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      IDEAGITAL Vote
     </ion-title>
   </ion-navbar>
 </ion-header>
-
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content>
+  <div padding>
+    <h1 class="header">ใครจะเป็นแชมป์ฟุตบอลโลก?</h1>
+    <p class="sub-header">* โหวตทีมโปรดของคุณและดูผลลัพธ์</p>
+  </div>
+  <div class="vote-area" *ngIf="!voted">
+    <div class="options">
+      <button ion-button full class="option" color="light" [ngClass]="{active: selectedOption === option}" *ngFor="let option of optionsArray"
+        (click)="selectOption(option)">{{options[option].name}}</button>
+    </div>
+    <div padding>
+      <button ion-button block class="submit" (click)="vote()">ยืนยันการโหวต!</button>
+    </div>
+  </div>
+  <div class="result-area" *ngIf="voted">
+    <canvas baseChart [data]="chartData" [labels]="optionsArray" [chartType]="chartType"></canvas>
+    <div ion-button block class="response">ขอบคุณสำหรับการโหวด!</div>
+  </div>
 </ion-content>
